Add filter by status
